--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Black Shadow Topup</title>
+  <style>
+    body { font-family: sans-serif; background: #f5f5f5; color: #222; margin: 0; padding: 0; }
+    header { background: #111; color: #fff; padding: 20px; text-align: center; }
+    .content { padding: 30px; max-width: 800px; margin: auto; }
+    .card { background: white; padding: 20px; border-radius: 10px; margin: 20px 0; box-shadow: 0 0 10px #ccc; }
+    h2 { margin-top: 0; }
+    .btn { display: inline-block; background: #000; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Black Shadow Topup</h1>
+    <p>Fast & Trusted Topup Service</p>
+  </header>
+  <div class="content">
+    <div class="card">
+      <h2>🔥 Services</h2>
+      <ul>
+        <li>UID Topup</li>
+        <li>Level Up Pass</li>
+        <li>Unipin Topup</li>
+        <li>PUBG UC</li>
+        <li>All Premium Apps (Spotify, ChatGPT, Netflix...)</li>
+      </ul>
+    </div>
+    <div class="card">
+      <h2>📞 Contact & Order</h2>
+      <p>Telegram: <a href="https://t.me/blackshadowtopupbd">@blackshadowtopupbd</a></p>
+      <a class="btn" href="https://t.me/blackshadowtopupbd">Order Now</a>
+    </div>
+  </div>
+</body>
+</html>
