--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Black Shadow Topup</title>
+  <title>Sabbir Topup BD</title>
   <style>
     body { font-family: sans-serif; background: #f5f5f5; color: #222; margin: 0; padding: 0; }
     header { background: #111; color: #fff; padding: 20px; text-align: center; }
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <h1>Black Shadow Topup</h1>
+    <h1>Sabbir Topup BD</h1>
     <p>Fast & Trusted Topup Service</p>
   </header>
   <div class="content">
@@ -29,8 +29,8 @@
     </div>
     <div class="card">
       <h2>📞 Contact & Order</h2>
-      <p>Telegram: <a href="https://t.me/blackshadowtopupbd">@blackshadowtopupbd</a></p>
-      <a class="btn" href="https://t.me/blackshadowtopupbd">Order Now</a>
+      <p>Telegram: <a href="https://t.me/sabbirtopupbd">@sabbirtopupbd</a></p>
+      <a class="btn" href="https://t.me/sabbirtopupbd">Order Now</a>
     </div>
   </div>
 </body>
