--- a/index.html
+++ b/index.html
@@ -1,37 +1,78 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Sabbir Topup BD</title>
-  <style>
-    body { font-family: sans-serif; background: #f5f5f5; color: #222; margin: 0; padding: 0; }
-    header { background: #111; color: #fff; padding: 20px; text-align: center; }
-    .content { padding: 30px; max-width: 800px; margin: auto; }
-    .card { background: white; padding: 20px; border-radius: 10px; margin: 20px 0; box-shadow: 0 0 10px #ccc; }
-    h2 { margin-top: 0; }
-    .btn { display: inline-block; background: #000; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Black Shadow Topup</title>
+<style>
+  body {
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #121212;
+    color: #e0e0e0;
+  }
+  header {
+    background-color: #00c853;
+    padding: 20px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.8em;
+    letter-spacing: 2px;
+  }
+  main {
+    max-width: 600px;
+    margin: 30px auto;
+    padding: 10px;
+  }
+  h2 {
+    color: #00c853;
+  }
+  ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  ul li {
+    background: #1e1e1e;
+    margin: 10px 0;
+    padding: 15px;
+    border-radius: 8px;
+    font-size: 1.2em;
+  }
+  .telegram-btn {
+    display: block;
+    background-color: #0088cc;
+    color: white;
+    padding: 15px;
+    margin: 30px auto;
+    text-align: center;
+    border-radius: 8px;
+    width: 100%;
+    max-width: 300px;
+    font-size: 1.2em;
+    font-weight: bold;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+  }
+  .telegram-btn:hover {
+    background-color: #006699;
+  }
+  @media (max-width: 640px) {
+    body {
+      padding: 10px;
+    }
+    main {
+      margin: 10px;
+    }
+  }
+</style>
 </head>
 <body>
-  <header>
-    <h1>Sabbir Topup BD</h1>
-    <p>Fast & Trusted Topup Service</p>
-  </header>
-  <div class="content">
-    <div class="card">
-      <h2>🔥 Services</h2>
-      <ul>
-        <li>UID Topup</li>
-        <li>Level Up Pass</li>
-        <li>Unipin Topup</li>
-        <li>PUBG UC</li>
-        <li>All Premium Apps (Spotify, ChatGPT, Netflix...)</li>
-      </ul>
-    </div>
-    <div class="card">
-      <h2>📞 Contact & Order</h2>
-      <p>Telegram: <a href="https://t.me/sabbirtopupbd">@sabbirtopupbd</a></p>
-      <a class="btn" href="https://t.me/sabbirtopupbd">Order Now</a>
-    </div>
-  </div>
-</body>
-</html>
+
+<header>Black Shadow Topup</header>
+
+<main>
+  <h2>🔥 Our Services</h2>
+  <ul>
+    <li>UID Topup</li>
+    <li>Level Up Pass</li>
+    <li>Un
