--- a/index.html
+++ b/index.html
@@ -5,74 +5,60 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Black Shadow Topup</title>
 <style>
+  /* Reset & base */
+  * {
+    box-sizing: border-box;
+  }
   body {
-    margin: 0;
+    margin: 0; padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: #121212;
     color: #e0e0e0;
+    line-height: 1.6;
   }
   header {
     background-color: #00c853;
-    padding: 20px;
+    padding: 25px 10px;
     text-align: center;
-    font-weight: bold;
-    font-size: 1.8em;
-    letter-spacing: 2px;
+    font-weight: 700;
+    font-size: 2.2rem;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    box-shadow: 0 4px 8px rgba(0, 200, 83, 0.5);
   }
   main {
     max-width: 600px;
-    margin: 30px auto;
-    padding: 10px;
+    margin: 40px auto;
+    padding: 0 15px;
   }
   h2 {
-    color: #00c853;
+    color: #00e676;
+    margin-bottom: 15px;
+    font-weight: 700;
+    font-size: 1.8rem;
+    border-bottom: 2px solid #00e676;
+    padding-bottom: 8px;
   }
   ul {
-    list-style-type: none;
-    padding: 0;
+    list-style: none;
+    padding-left: 0;
   }
   ul li {
     background: #1e1e1e;
-    margin: 10px 0;
-    padding: 15px;
-    border-radius: 8px;
-    font-size: 1.2em;
+    margin: 12px 0;
+    padding: 18px 20px;
+    border-radius: 12px;
+    font-size: 1.2rem;
+    box-shadow: 0 2px 6px rgba(0,230,118,0.4);
+    transition: transform 0.2s ease;
+  }
+  ul li:hover {
+    transform: scale(1.03);
   }
   .telegram-btn {
     display: block;
-    background-color: #0088cc;
-    color: white;
-    padding: 15px;
-    margin: 30px auto;
-    text-align: center;
-    border-radius: 8px;
     width: 100%;
-    max-width: 300px;
-    font-size: 1.2em;
-    font-weight: bold;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-  }
-  .telegram-btn:hover {
-    background-color: #006699;
-  }
-  @media (max-width: 640px) {
-    body {
-      padding: 10px;
-    }
-    main {
-      margin: 10px;
-    }
-  }
-</style>
-</head>
-<body>
-
-<header>Black Shadow Topup</header>
-
-<main>
-  <h2>🔥 Our Services</h2>
-  <ul>
-    <li>UID Topup</li>
-    <li>Level Up Pass</li>
-    <li>Un
+    max-width: 320px;
+    margin: 40px auto 0;
+    padding: 16px 0;
+    background: linear-gradient(135deg, #00bfa5,
