--- a/index.html
+++ b/index.html
@@ -61,4 +61,28 @@
     max-width: 320px;
     margin: 40px auto 0;
     padding: 16px 0;
-    background: linear-gradient(135deg, #00bfa5,
+    background: linear-gradient(135deg, #00bfa5, #1de9b6);
+    color: #121212;
+    font-weight: 700;
+    font-size: 1.4rem;
+    border-radius: 30px;
+    text-align: center;
+    text-decoration: none;
+    box-shadow: 0 5px 15px rgba(29, 233, 182, 0.6);
+    transition: background 0.3s ease, box-shadow 0.3s ease;
+  }
+  .telegram-btn:hover {
+    background: linear-gradient(135deg, #00e676, #00c853);
+    box-shadow: 0 8px 24px rgba(0, 230, 118, 0.8);
+  }
+
+  @media (max-width: 640px) {
+    header {
+      font-size: 1.7rem;
+      padding: 20px 5px;
+      letter-spacing: 2px;
+    }
+    main {
+      margin: 25px auto;
+    }
+    ul
