--- a/index.html
+++ b/index.html
@@ -1,88 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bn">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Black Shadow Topup</title>
-<style>
-  /* Reset & base */
-  * {
-    box-sizing: border-box;
-  }
-  body {
-    margin: 0; padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #121212;
-    color: #e0e0e0;
-    line-height: 1.6;
-  }
-  header {
-    background-color: #00c853;
-    padding: 25px 10px;
-    text-align: center;
-    font-weight: 700;
-    font-size: 2.2rem;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-    box-shadow: 0 4px 8px rgba(0, 200, 83, 0.5);
-  }
-  main {
-    max-width: 600px;
-    margin: 40px auto;
-    padding: 0 15px;
-  }
-  h2 {
-    color: #00e676;
-    margin-bottom: 15px;
-    font-weight: 700;
-    font-size: 1.8rem;
-    border-bottom: 2px solid #00e676;
-    padding-bottom: 8px;
-  }
-  ul {
-    list-style: none;
-    padding-left: 0;
-  }
-  ul li {
-    background: #1e1e1e;
-    margin: 12px 0;
-    padding: 18px 20px;
-    border-radius: 12px;
-    font-size: 1.2rem;
-    box-shadow: 0 2px 6px rgba(0,230,118,0.4);
-    transition: transform 0.2s ease;
-  }
-  ul li:hover {
-    transform: scale(1.03);
-  }
-  .telegram-btn {
-    display: block;
-    width: 100%;
-    max-width: 320px;
-    margin: 40px auto 0;
-    padding: 16px 0;
-    background: linear-gradient(135deg, #00bfa5, #1de9b6);
-    color: #121212;
-    font-weight: 700;
-    font-size: 1.4rem;
-    border-radius: 30px;
-    text-align: center;
-    text-decoration: none;
-    box-shadow: 0 5px 15px rgba(29, 233, 182, 0.6);
-    transition: background 0.3s ease, box-shadow 0.3s ease;
-  }
-  .telegram-btn:hover {
-    background: linear-gradient(135deg, #00e676, #00c853);
-    box-shadow: 0 8px 24px rgba(0, 230, 118, 0.8);
-  }
-
-  @media (max-width: 640px) {
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sabbir Topup BD</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background: #f5f5f5;
+      margin: 0;
+      padding: 0;
+    }
     header {
-      font-size: 1.7rem;
-      padding: 20px 5px;
-      letter-spacing: 2px;
+      background: #111;
+      color: white;
+      padding: 20px;
+      text-align: center;
     }
-    main {
-      margin: 25px auto;
+    .container {
+      max-width: 500px;
+      margin: 20px auto;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #ccc;
     }
-    ul
+    input, select, button {
+      width: 100%;
+      padding: 12px;
+      margin-top: 10px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    button {
+      background: #28a745;
+      color: white;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #218838;
+    }
+    .footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+      color: #666;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Sabbir Topup BD</h1>
+    <p>Trusted FF Diamond Seller in Bangladesh</p>
+  </header>
+
+  <div class="container">
+    <label for="ffid">🎮 Free Fire UID</label>
+    <input type="text" id="ffid" placeholder="Enter your Free Fire ID" required />
+
+    <label for="amount">💎 Select Diamond Package</label>
+    <select id="amount">
+      <option value="100">100 Diamonds - ৳85</option>
+      <option value="210">210 Diamonds - ৳170</option>
+      <option value="530">530 Diamonds - ৳430</option>
+      <option value="1080">1080 Diamonds - ৳850</option>
+    </select>
+
+    <label for="payment">💳 Payment Method</label>
+    <select id="payment">
+      <option value="bkash">Bkash</option>
+      <option value="nagad">Nagad</option>
+      <option value="rocket">Rocket</option>
+    </select>
+
+    <label for="trxid">📩 Payment Transaction ID</label>
+    <input type="text" id="trxid" placeholder="Enter your payment trxID" required />
+
+    <button onclick="submitOrder()">📤 Submit Order</button>
+  </div>
+
+  <div class="footer">
+    &copy; 2025 Sabbir Topup BD | Telegram: @YourTelegramBot
+  </div>
+
+  <script>
+    function submitOrder() {
+      const ffid = document.getElementById('ffid').value;
+      const amount = document.getElementById('amount').value;
+      const payment = document.getElementById('payment').value;
+      const trxid = document.getElementById('trxid').value;
+
+      if (!ffid || !trxid) {
+        alert("⚠️ Please fill all the required fields.");
+        return;
+      }
+
+      // Telegram Bot Integration (Optional)
+      // You can send this data to Telegram using a bot or
